<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <RelativeLayout
            android:gravity="center|center_vertical"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_alignParentStart="true"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_black_24dp"
                android:layout_width="@dimen/margin_large"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDaskBoard"
                android:textSize="@dimen/text_regular_2x"
                android:text="OMP Dashboard"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium"
                android:layout_toEndOf="@id/ivBack"
                android:gravity="center_vertical|center"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnProgress"
                android:text="@string/in_progress"
                android:textColor="@color/white"
               android:textAlignment="center"
                android:textSize="@dimen/text_small"
                android:textAllCaps="false"
                android:fontFamily="@font/inter"
                android:background="@drawable/bg_progress_btn"
                android:layout_toEndOf="@id/tvDaskBoard"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/margin_medium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/tvTitle"
       android:layout_below="@id/toolBar"
       android:layout_marginTop="@dimen/margin_large"
       android:layout_marginStart="@dimen/margin_medium_2"
       android:layout_marginEnd="@dimen/margin_medium_2"
       android:text="@string/create_additional_pages"
       android:textColor="@color/black"
       android:textSize="@dimen/text_big"
      android:fontFamily="@font/inter_medium"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDate"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:text="03 days | Dec 18,2021 "
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/colorSecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProfiles"
        android:layout_below="@id/tvDate"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.padc.csh.customuicomponentsassignment.customComponents.PlusIconView
        android:id="@+id/ivPlus"
        android:elevation="@dimen/margin_card_medium_2"
        android:layout_below="@id/tvDate"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_toEndOf="@id/rvProfiles"
        android:layout_marginStart="-10dp"
        android:visibility="visible"
        android:layout_width="50dp"
        android:layout_height="50dp"/>


    <com.padc.csh.customuicomponentsassignment.customComponents.ProgressCircleView
        android:id="@+id/ivProgress"
        android:layout_below="@id/tvDate"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:text="85%"
        android:gravity="center_vertical|center"
        android:layout_alignParentEnd="true"
        app:progress="80"
        app:cornerRadiusProgress="25dp"
        app:borderWidthProgress="10dp"
        android:layout_width="@dimen/dimen_50dp"
        android:layout_height="@dimen/dimen_50dp"/>

    <RelativeLayout
        android:id="@+id/rlData"
        android:background="@drawable/bg_task_view_main"
        android:layout_below="@id/rvProfiles"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvData"
            android:text="@string/lbl_data"
            android:fontFamily="@font/inter_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTasks"
            android:text="@string/lbl_tasks"
            android:layout_toEndOf="@id/tvData"
            android:fontFamily="@font/inter_bold"
            android:layout_marginLeft="@dimen/dimen_50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShowInDays"
            android:text="@string/lbl_show_in_days"
            android:fontFamily="@font/inter_bold"
            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_black_24"
           android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTasks"
            android:layout_below="@id/tvTasks"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</RelativeLayout>